# wot_spy_tg_bot

./: bot.py  config.py  pyproject.toml
common/: db.py  kafka.py
